# wgpu-3dgs-editor

./: CHANGELOG.md  Cargo.toml  README.md
examples/: filter_selection.rs
src/: error.rs  lib.rs  selection.rs  shader.rs
src/buffer/: mask.rs  selection.rs
src/shader/selection/: ops.wesl  primitive_ops.wesl  sphere.wesl  template.wesl  utils.wesl
