[package]
name = "wgpu-3dgs-editor"
version = "0.4.0"
edition = "2024"
authors = ["Lio Qing"]
license = "MIT"
description = "A 3D Gaussian splatting library written in Rust using wgpu."
readme = "README.md"
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*",
]
repository = "https://github.com/LioQing/wgpu-3dgs-editor"
keywords = ["gaussian-splatting", "point-cloud", "wgpu", "graphics", "ply"]
categories = ["graphics", "rendering", "wasm"]

[lib]
name = "wgpu_3dgs_editor"
path = "src/lib.rs"

[dependencies]
wgpu-3dgs-core = { path = "../wgpu-3dgs-core" }

bytemuck = { version = "1.23", features = [
    "derive",
    "extern_crate_alloc",
    "min_const_generics",
] }
glam = { version = "0.30", features = ["bytemuck"] }
half = { version = "2.4", features = ["bytemuck"] }
log = "0.4"
paste = "1.0"
thiserror = "2.0"
wgpu = "25.0"
wesl = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
winit = { version = "0.30" }

